# psy-doge-solana-bridge

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  package.json  pnpm-workspace.yaml
bridge-config/: bridge-output.json  custodian_config.yaml  doge_config.json
bridge-config/keys/: doge_mint.json  fee_spender.json  operator.json  payer.json
bridge-config/users/: user1.json  user2.json  user3.json
cli/: Cargo.toml  example-config.json  example-doge-config.json
cli/src/: main.rs
cli/src/commands/: custodian_transition.rs  init_delegated_manager.rs  mod.rs  update_delegated_manager.rs
clients/js/: package.json  tsconfig.json
clients/js/src/: bridge_client.ts  buffer_utils.ts  buffers.ts  client.ts  config.ts  constants.ts  errors.ts  index.ts  instructions.ts  layout.ts  types.ts
clients/rust/: Cargo.toml
clients/rust/examples/: bridge_monitor.rs  noop_shim_monitor.rs
clients/rust/src/: bridge_client.rs  buffer_manager.rs  client.rs  config.rs  constants.rs  errors.rs  history.rs  instructions.rs  lib.rs  monitor.rs  noop_shim_monitor.rs  types.rs
clients/rust/src/api/: blocks.rs  buffers.rs  delegated_manager.rs  deposits.rs  mints.rs  mod.rs  state.rs  withdrawals.rs
clients/rust/src/buffer/: manager.rs  mod.rs  pending_mint.rs  txo.rs
clients/rust/src/rpc/: mod.rs  rate_limiter.rs  retry.rs
clients/rust/tests/: client_tests.rs
clients/rust_user/: Cargo.toml
clients/rust_user/examples/: create_token_account.rs  set_close_authority_null.rs  transfer.rs  withdraw_to_doge.rs
clients/rust_user/src/: client.rs  config.rs  errors.rs  instructions.rs  lib.rs  manual_claim_client.rs
clients/user_js/: package-lock.json  package.json
clients/user_js/src/: client.ts  config.ts  errors.ts  index.ts  instructions.ts  manual_claim_client.ts
docs/: CustodianTransition.md
keys/: fee_spender.json  operator.json  payer.json
libraries/delegated-manager-set-types/: Cargo.toml
libraries/delegated-manager-set-types/src/: lib.rs
libraries/psy-bridge-core/: Cargo.toml
libraries/psy-bridge-core/src/: custodian_config.rs  error.rs  header.rs  lib.rs  serde_arrays.rs  txo_constants.rs
libraries/psy-bridge-core/src/common_types/: mod.rs
libraries/psy-bridge-core/src/crypto/: mod.rs
libraries/psy-bridge-core/src/crypto/hash/: mod.rs  ripemd160.rs  ripemd160_impl.rs  sha256.rs  sha256_impl.rs  traits.rs
libraries/psy-bridge-core/src/crypto/hash/merkle/: append.rs  delta_merkle_proof.rs  fixed_append_tree.rs  in_memory.rs  merkle_proof.rs  mod.rs  test_merkle_tree.rs  utils.rs
libraries/psy-bridge-core/src/crypto/secp256k1/: memory_wallet.rs  mod.rs  recover.rs  signature.rs  single.rs  traits.rs
libraries/psy-bridge-core/src/crypto/zk/: jtmb.rs  mod.rs  sp1_groth16.rs  traits.rs
libraries/psy-doge-solana-core/: Cargo.toml  LICENSE
libraries/psy-doge-solana-core/src/: constants.rs  lib.rs  programs.rs
libraries/psy-doge-solana-core/src/data_accounts/: mod.rs  pending_mint.rs
libraries/psy-doge-solana-core/src/fake_zkp/: mod.rs
libraries/psy-doge-solana-core/src/generic_cpi/: mod.rs
libraries/psy-doge-solana-core/src/instructions/: doge_bridge.rs  manual_claim.rs  mod.rs
libraries/psy-doge-solana-core/src/program_state/: auto_mint.rs  block_update.rs  core.rs  deposit.rs  mint_group.rs  mod.rs  operator.rs  proc_withdrawal.rs  withdrawal.rs
libraries/psy-doge-solana-core/src/public_inputs/: mod.rs
libraries/psy-doge-solana-core/src/user_manual_deposit_manager/: mod.rs
libraries/psy-doge-solana-core/src/utils/: deposit_leaf.rs  fees.rs  mod.rs
programs/custodian-set-manager/: Cargo.toml
programs/custodian-set-manager/src/: lib.rs
programs/delegated-manager-set/: Cargo.toml
programs/delegated-manager-set/src/: lib.rs
programs/doge-bridge/: Cargo.toml  README.md
programs/doge-bridge/src/: cpi_impl.rs  error.rs  instruction.rs  lib.rs  processor.rs  program_pub_keys.rs  state.rs
programs/generic-buffer/: Cargo.toml  README.md
programs/generic-buffer/src/: lib.rs
programs/manual-claim/: Cargo.toml  README.md
programs/manual-claim/src/: error.rs  instruction.rs  lib.rs  processor.rs
programs/noop-shim/: Cargo.toml
programs/noop-shim/src/: lib.rs
programs/pending-mint-buffer/: Cargo.toml  README.md
programs/pending-mint-buffer/src/: lib.rs
programs/txo-buffer/: Cargo.toml  README.md
programs/txo-buffer/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/tests/: bridge_flow.rs  test_custodian_transition.rs  test_history_reconstruction.rs  test_reorg.rs  test_snapshot_withdrawals.rs
tests/local-network-tests/: Cargo.toml  README.md
tests/local-network-tests/program-keys/: doge-bridge.json  generic-buffer.json  manual-claim.json  noop-shim.json  pending-mint.json  txo-buffer.json
tests/local-network-tests/src/: lib.rs  local_block_transition_helper.rs  local_bridge_context.rs  local_test_client.rs
tests/local-network-tests/tests/: test_bridge_client.rs  test_history_sync.rs  test_reorg.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: block_transition_helper.rs  constants.rs  lib.rs  mock_data.rs  pending_mints_buffer_builder.rs  test_client.rs
tests/test-utils/src/builders/: auto_claim_builder.rs  mod.rs  pending_mints_buffer_builder.rs  txo_builder.rs
tests/test-utils/src/tree/: merkle_node.rs  mod.rs  sha256.rs  simple_merkle_tree_recorder.rs
