[package]
name = "doge-bridge-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing the Doge Bridge on Solana"

[dependencies]
# Workspace dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
shellexpand = { workspace = true }

# Local crates
psy-bridge-core = { path = "../libraries/psy-bridge-core", features = ["serialize_bytemuck", "serialize_serde", "sha2"] }
psy-doge-solana-core = { path = "../libraries/psy-doge-solana-core", features = ["serialize_bytemuck", "serialize_serde", "fake_signer"] }
doge-bridge-client = { path = "../clients/rust" }
doge-bridge-test-utils = { path = "../tests/test-utils" }
delegated-manager-set-types = { path = "../libraries/delegated-manager-set-types" }

# CLI
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde_yaml = "0.9"

# Token
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }

[[bin]]
name = "doge-bridge-cli"
path = "src/main.rs"

[[example]]
name = "e2e_bridge_client"
path = "examples/e2e_bridge_client.rs"
