[package]
name = "doge-bridge-client"
version = "0.2.0"
edition = "2021"

[dependencies]
# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"

# Rate limiting
governor = "0.6"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
bytemuck = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
base64 = "0.21"

# Solana transaction status
solana-transaction-status = "=2.2.1"

# Logging
tracing = "0.1"

# Local libraries
psy-bridge-core = { path = "../../libraries/psy-bridge-core", features = ["std", "serialize_bytemuck", "sha2"], default-features = false }
psy-doge-solana-core = { path = "../../libraries/psy-doge-solana-core", features = ["std", "serialize_bytemuck", "fake_signer"], default-features = false }
delegated-manager-set-types = { path = "../../libraries/delegated-manager-set-types" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
hex = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "noop_shim_monitor"
path = "examples/noop_shim_monitor.rs"