[package]
name = "psy-doge-solana-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["serialize_borsh", "serialize_bytemuck"]
serialize_borsh = ["dep:borsh", "zerocopy/borsh", "psy-bridge-core/serialize_borsh"]
serialize_serde = ["dep:serde", "dep:serde_with", "zerocopy/serde", "psy-bridge-core/serialize_serde"]
solprogram = ["dep:solana-program", "psy-bridge-core/solprogram"]
sha2 = ["psy-bridge-core/sha2"]
sp1 = ["psy-bridge-core/sp1"]
std = ["psy-bridge-core/std"]
fake_signer = ["psy-bridge-core/secp256k1"]

serialize_speedy = ["dep:speedy", "zerocopy/speedy", "psy-bridge-core/serialize_speedy"]
serialize_bytemuck = ["dep:bytemuck", "zerocopy/bytemuck", "psy-bridge-core/serialize_bytemuck"]

[dependencies]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0", optional = true }	
psy-bridge-core = { path = "../../libraries/psy-bridge-core", default-features = false }
macro_rules_attribute = { workspace = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true, optional = true }
speedy = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
proptest = "1.9.0"