[package]
name = "txo-buffer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[features]
no-entrypoint = []
mock-zkp = []
custom-panic = []
custom-heap = []

[dependencies]
solana-program = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }