[package]
name = "doge-bridge-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
psy-bridge-core = { path = "../../libraries/psy-bridge-core", default-features = false, features = ["std", "serialize_bytemuck"] }
psy-doge-solana-core = { path = "../../libraries/psy-doge-solana-core", default-features = false, features = ["std", "serialize_bytemuck", "fake_signer"] }
doge-bridge-client = { path = "../../clients/rust" }

# Programs
doge-bridge = { path = "../../programs/doge-bridge", features = ["no-entrypoint"] }
pending-mint-buffer = { path = "../../programs/pending-mint-buffer", features = ["no-entrypoint"], default-features = false }
txo-buffer = { path = "../../programs/txo-buffer", features = ["no-entrypoint"], default-features = false }
generic-buffer = { path = "../../programs/generic-buffer", features = ["no-entrypoint"], default-features = false }
manual-claim = { path = "../../programs/manual-claim", features = ["no-entrypoint"] }
noop-shim = { path = "../../programs/noop-shim", features = ["no-entrypoint"] }
delegated-manager-set = { path = "../../programs/delegated-manager-set", features = ["no-entrypoint"] }
delegated-manager-set-types = { path = "../../libraries/delegated-manager-set-types" }
borsh = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }